--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,30 @@
   "version": 2,
   "builds": [
     {
-      "src": "main.py",
-      "use": "@vercel/python"
+      "src": "api/index.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
     }
   ],
   "routes": [
     {
+      "src": "/static/(.*)",
+      "dest": "/frontend/static/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "main.py"
+      "dest": "/api/index.py"
     }
   ],
   "env": {
     "PYTHONPATH": "./"
-  }
+  },
+  "functions": {
+    "api/index.py": {
+      "maxDuration": 30
+    }
+  },
+  "outputDirectory": "dist"
 }
