Fix: Otimização para deploy no Vercel - API completa integrada

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,13 @@ APPLE_CLIENT_SECRET=seu-apple-client-secret-real
 # App Security
 SECRET_KEY=sua-chave-super-secreta-aqui-256bits
 
-# Database (PostgreSQL para produção)
-DATABASE_URL=postgresql://usuario:senha@host:5432/linkify
+# Supabase Configuration
+SUPABASE_URL=https://seu-projeto.supabase.co
+SUPABASE_KEY=https://ddlbmtohqpzvtbswaeuo.supabase.co
+SUPABASE_SERVICE_KEY=sua-supabase-service-key
+
+# Database (PostgreSQL via Supabase)
+DATABASE_URL=postgresql://postgres:Lone2970Sw1@#@db.ddlbmtohqpzvtbswaeuo.supabase.co:5432/postgres
 
 # Vercel
 VERCEL_ENV=production
