--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -1,5 +1,6 @@
+# Requirements para produção (Vercel/Linux)
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0
 sqlalchemy==2.0.23
 bcrypt==4.1.1
 python-jose[cryptography]==3.3.0
@@ -13,6 +14,3 @@ starlette==0.27.0
 itsdangerous==2.1.2
 psycopg2-binary==2.9.9
 supabase==2.3.4
-passlib[bcrypt]==1.7.4
-pydantic==2.5.0
-pydantic-settings==2.1.0
