--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,34 @@
-# OAuth Credentials - SUBSTITUA PELOS VALORES REAIS
-GOOGLE_CLIENT_ID=seu-google-client-id-real
-GOOGLE_CLIENT_SECRET=seu-google-client-secret-real
-GITHUB_CLIENT_ID=seu-github-client-id-real
-GITHUB_CLIENT_SECRET=seu-github-client-secret-real
-MICROSOFT_CLIENT_ID=seu-microsoft-client-id-real
-MICROSOFT_CLIENT_SECRET=seu-microsoft-client-secret-real
-APPLE_CLIENT_ID=seu-apple-client-id-real
-APPLE_CLIENT_SECRET=seu-apple-client-secret-real
+# Configurações do Banco de Dados
+DATABASE_URL=postgresql://user:password@localhost:5432/linkify
+# Para Supabase: postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres
 
-# App Security
-SECRET_KEY=sua-chave-super-secreta-aqui-256bits
+# Configurações de Segurança
+SECRET_KEY=your-super-secret-key-here-change-in-production
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Supabase Configuration
-SUPABASE_URL=https://seu-projeto.supabase.co
-SUPABASE_KEY=https://ddlbmtohqpzvtbswaeuo.supabase.co
-SUPABASE_SERVICE_KEY=sua-supabase-service-key
+# OAuth Configurações (Opcional)
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
 
-# Database (PostgreSQL via Supabase)
-DATABASE_URL=postgresql://postgres:Lone2970Sw1@#@db.ddlbmtohqpzvtbswaeuo.supabase.co:5432/postgres
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
 
-# Vercel
+MICROSOFT_CLIENT_ID=your-microsoft-client-id
+MICROSOFT_CLIENT_SECRET=your-microsoft-client-secret
+
+APPLE_CLIENT_ID=your-apple-client-id
+APPLE_CLIENT_SECRET=your-apple-client-secret
+
+# Configurações do Supabase (Opcional)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_KEY=your-supabase-anon-key
+SUPABASE_SERVICE_KEY=your-supabase-service-key
+
+# Configurações de Produção
+ENVIRONMENT=development
+DEBUG=true
 VERCEL_ENV=production
+
+# URL Base (para links encurtados)
+BASE_URL=https://linkify-rho.vercel.app
